--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
 
 body {
   background-color: #f9fafb;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Rosario", sans-serif;
   display: flex;
   align-items: center;
   justify-content: center;
